# Auras

./: .gitignore  Auras.sln  CLAUDE.md  LICENSE  PAMS.sln  README.md
Aura/: .env.example  pyproject.toml
Aura/src/: agent.py  asis_client.py  cli.py  config.py
AuraError/: AuraError.csproj  GlobalUsings.cs
AuraError/Exceptions/: AuraException.cs  DuplicateFileException.cs  FileNameConflictException.cs  FileRecordNotFoundException.cs  InvalidTagOperationException.cs  PhysicalFileNotFoundException.cs  ValidationException.cs
AuraError/Results/: Result.cs
PAMS.CLI/: PAMS.CLI.csproj  Program.cs
PAMS.Core/: PAMS.Core.csproj
PAMS.Core/src/: PAMSCoreAPI.cs
PAMS.Core/src/Models/: ArchiveConfig.cs  Config.cs  FileRecord.cs  Tag.cs
PAMS.Core/src/Repositories/: ArchiveConfigRepository.cs  ConfigRepository.cs  HashIndexRepository.cs  MetadataRepository.cs  TagIndexRepository.cs
PAMS.Core/src/Services/: ArchiveConfigService.cs  ConfigService.cs  FileService.cs  SearchService.cs
PAMS.Core/src/Storage/: JsonStorage.cs
PAMS.Core/src/Utils/: HashHelper.cs  PathHelper.cs
Test/ASIS.Test/: ASIS.Test.csproj  ArchiveConfigRepositoryTests.cs  ArchiveServiceTests.cs  FileServiceTests.cs  HashHelperTests.cs  HashIndexRepositoryTests.cs  JsonStorageTests.cs  MetadataRepositoryTests.cs  PathHelperTests.cs  SearchServiceTests.cs  TagIndexRepositoryTests.cs
Tools/ASIS/ASIS.CLI/: ASIS.CLI.csproj  Program.cs
doc/: architecture.md  auras_structure.md
doc/asis/: asis_api.md  asis_cli_usage.md  asis_structure.md
doc/aura/: aura_usage.md
doc/error/: error_api.md
(+24 files in other folders)
