[project]
name = "aura"
version = "0.1.0"
description = "AI agent for ASIS archive management"
readme = "../doc/aura/aura_usage.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
aura = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
